--- a/sass/scss/_porfolio.scss
+++ b/sass/scss/_porfolio.scss
@@ -162,7 +162,7 @@ label {
     font-weight: bold;
 }
 
-.project h2, .h2 {
+.project h2, h3, .h2 {
     font-size: 2.4em;
     line-height: 1.25;
     margin: 0.4em 0;
