--- a/sass/scss/_porfolio.scss
+++ b/sass/scss/_porfolio.scss
@@ -12,6 +12,7 @@
     display: block;
     padding: 0 15px;
     text-align: center;
+    font-family: $font-family-primary;
 }
 
 .text-gray {
@@ -19,7 +20,7 @@
 }
 
 .subtitle {
-    font-family: $font-family;
+    font-family: $font-family-primary;
 }
 
 .section .title-area .description {
@@ -119,7 +120,7 @@ a:hover, a:focus {
     color: #777777;
     opacity: .7;
     font-size: 14px;
-    font-family: $font-family;
+    font-family: $font-family-primary;
     text-decoration: none;
 
 
@@ -162,12 +163,14 @@ label {
     font-weight: bold;
 }
 
-.project h2, h3, .h2 {
+
+.project h3  {
     font-size: 2.4em;
     line-height: 1.25;
     margin: 0.4em 0;
     font-weight: bold;
 }
+
 
 /*.project p {
     font-size: 1em;
