--- a/sass/scss/_variables.scss
+++ b/sass/scss/_variables.scss
@@ -1,3 +1,5 @@
-$font-size: 16px;;
-$font-family: 'Roboto', sans-serif;
+$font-size: 16px;
+$font-family-primary: 'Nunito', sans-serif;
+$font-family-secondary: 'Roboto', sans-serif;
 $bg-footer: #9d9d9d;
+$title-white: #fff;
