--- a/sass/scss/_variables.scss
+++ b/sass/scss/_variables.scss
@@ -1,5 +1,6 @@
 $font-size: 16px;
 $font-family-primary: 'Nunito', sans-serif;
 $font-family-secondary: 'Roboto', sans-serif;
-$bg-footer: #9d9d9d;
+$font-family-icon: "Font Awesome 5 Free";
+$bg-footer: #7c60d5;
 $title-white: #fff;
