--- a/sass/scss/_global.scss
+++ b/sass/scss/_global.scss
@@ -5,6 +5,14 @@ html, body {
 
 }
 
+h1, h2 {
+    color: #6b64c3;
+    font-family: $font-family-primary;
+    font-weight: 700;
+    
+}
+
+
 
 
 section#index {
@@ -16,19 +24,46 @@ section#index {
 
 div {
     i.icon {
-        font-size: 3rem;
+        font-size: 1.5rem;
         padding-bottom: 20px;
+        color: #ffffff;
+        background: #7c60d5;
+        line-height: 60px;
+        height: 60px;
+        width: 60px;
+        text-align: center;
+        border-radius: 100%;
     }
 }
+
+
+    i.icon__servicios {
+        font-size: 1.5rem;
+        padding-bottom: 20px;
+        color: #ffffff;
+        background: #7c60d5;
+        line-height: 60px;
+        height: 60px;
+        width: 60px;
+        text-align: center;
+        border-radius: 100%;
+    }
+
+
+    ul.fa-ul.li__servicios{
+
+        margin-left: 0;
+    }
+
 
 /* Contacto */
 
 
 section#contacto {
+    margin-bottom: 30px;
 
     textarea, input, select {
         padding: 10px;
-        width: 300px;
         display: block;
         margin-bottom: 10px;
     }
@@ -78,7 +113,9 @@ section#contacto {
     width: 100%;
 }
 
-
+.solutions {
+    margin-top: 30px;
+}
 
 
 
