--- a/sass/scss/_images.scss
+++ b/sass/scss/_images.scss
@@ -1,22 +1,19 @@
  .bgimage {
     width:100%;
     height:500px;
-    background: url('https://images.unsplash.com/photo-1438109491414-7198515b166b?q=80&fm=jpg&s=cbdabf7a79c087a0b060670a6d79726c');
+    background: url('../../images/hero-background-image-01.png');
     background-repeat: no-repeat;
     background-position: center;
-    background-size:cover;
+    /*background-size:cover;*/
     background-attachment: fixed;
-    
-    h1 {
-        color: $title-white;
-        text-shadow:2px 2px rgba(63,107,169, 0.5);
-        font-family: $font-family-primary;
-        
-    }
+    background-color: #7bfbce;
 
     p {
-        color: $title-white;
+        color: #6b64c3;
         font-family: $font-family-primary;
-
+    
     }
-  }
+    h1 {
+        text-shadow: 2px 2px #f6f6f6;
+    }
+ }
