--- a/sass/scss/_variables.scss
+++ b/sass/scss/_variables.scss
@@ -4,3 +4,4 @@ $font-family-secondary: 'Roboto', sans-serif;
 $font-family-icon: "Font Awesome 5 Free";
 $bg-footer: #7c60d5;
 $title-white: #fff;
+$bg-proceso: #7c60d5;
