--- a/sass/scss/_footer.scss
+++ b/sass/scss/_footer.scss
@@ -6,9 +6,6 @@ footer {
     height: 80px;
     background: $bg-footer;
     color: #ffffff;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
     margin: 0;
+    text-align: center;
 }
