Cambio boton hero

--- a/sass/scss/_variables.scss
+++ b/sass/scss/_variables.scss
@@ -5,3 +5,4 @@ $font-family-icon: "Font Awesome 5 Free";
 $bg-footer: #7c60d5;
 $title-white: #fff;
 $bg-proceso: #7c60d5;
+$color-primary:  #7c60d5;
