--- a/sass/scss/_servicios.scss
+++ b/sass/scss/_servicios.scss
@@ -12,7 +12,7 @@ section#servicios {
 ul {
   li {
       i {
-        color: #02d871;
+        color: $color-complementario;
         content: "";
         top: 2px;
         font-size: 30px;
@@ -43,6 +43,11 @@ ul.fa-ul.li__servicios{
 
   margin-left: 0;
 }
+
+
+
+
+
 
 
 i.icon__servicios {
