--- a/sass/scss/_footer.scss
+++ b/sass/scss/_footer.scss
@@ -4,7 +4,7 @@ footer {
     right: 0;
     width: 100%;
     height: 80px;
-    background: $bg-footer;
+    background: $color-primary;
     color: #ffffff;
     margin: 0;
     text-align: center;
