--- a/scss/_cotizar.scss
+++ b/scss/_cotizar.scss
@@ -1,7 +1,80 @@
 .marginTop__Cotizar {
-    margin-top: 150px;
+    padding-top: 150px;
 }
 
 .marginBottom__Cotizar {
     margin-bottom: 100px;
+}
+.btn.btn-raised.btn-primary {
+    background-color: #02d871!important;
+    font-size: 16px;
+    width: 100%;
+    padding: 15px;
+}
+.header_cotizar  {
+    background-color:#7c60d5;
+    padding: 10px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+}
+.header_cotizar h1 {
+    color: #ffffff!important;
+}
+
+
+.error {
+    background-color: #FBE9E7;
+    border: 1px solid #F4511E;
+    padding: 10px;
+    margin-bottom: 20px;
+    text-align: center;
+    color: #F4511E;
+}
+.correcto {
+    background-color: rgb(211, 249, 187);
+    border: 1px solid rgb(50, 167, 0);
+    padding: 10px;
+    margin-bottom: 20px;
+    text-align: center;
+    color: rgb(4, 150, 50);
+}
+.error p {
+    margin:0;
+}
+#contenido {
+    margin-top: 60px;
+    background-color: white;
+    -webkit-box-shadow: 0px 21px 46px -15px rgba(0,0,0,1);
+    -moz-box-shadow: 0px 21px 46px -15px rgba(0,0,0,1);
+    box-shadow: 0px 21px 46px -15px rgba(0,0,0,1);
+}
+.contenido-formulario {
+    margin-top: 30px;
+}
+#cargando {
+    text-align: center;
+}
+#cargando img {
+    display: none;
+    margin: 0 auto;
+}
+#resultado  {
+    margin-bottom: 40px;
+}
+#resultado div {
+    border: 1px solid #7c60d5;
+    text-align: center;
+    padding: 0  0 20px 0;
+}
+#resultado div p {
+    margin-bottom: 0;
+}
+#resultado div p.header {
+    background-color: #7c60d5;
+    margin-bottom: 10px;
+    color:white;
+    padding: 10px;
+    text-transform: uppercase;
+    font-weight: bold;
 }
